[gd_scene load_steps=6 format=3 uid="uid://bnyulqip7ntx0"]

[ext_resource type="Script" uid="uid://d0wlswqu5538i" path="res://menues/scenes/score_board/score_board.gd" id="1_oqtw5"]
[ext_resource type="Texture2D" uid="uid://dogngqdwel26d" path="res://ASSETS/2d/rect28.png" id="2_42xrm"]
[ext_resource type="PackedScene" uid="uid://bkcsjsk2ciff" path="res://addons/maaacks_game_template/base/nodes/music_players/background_music_player.tscn" id="3_wiimy"]
[ext_resource type="AudioStream" uid="uid://cbe03ljmp0ych" path="res://ASSETS/sfx-music/footsteps_in_the_snow.ogg" id="4_epkl7"]

[sub_resource type="LabelSettings" id="LabelSettings_fdq42"]
font_size = 25

[node name="ScoreBoard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oqtw5")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_42xrm")
expand_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -34.0
offset_right = 20.0
offset_bottom = 34.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_fdq42")

[node name="PlayerResult" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="TimeLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Leaderboard" type="ItemList" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Play Again"

[node name="BackgroundMusicPlayer" parent="." instance=ExtResource("3_wiimy")]
stream = ExtResource("4_epkl7")
volume_db = 1.0

[connection signal="pressed" from="Panel/VBoxContainer/BackButton" to="." method="_on_button_pressed"]
